force-app/main/default/objects/ExecutionControlSetting__c/ExecutionControlSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To control the execution of Workflows, Triggers, Validation Rules &amp; Process Builder</description>
    <label>ExecutionControlSetting</label>
</CustomObject>