force-app/main/default/objects/ExecutionControlSetting__c/fields/Run_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Run_Process_Builder__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox lets us control the Process Builders</description>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>