force-app/main/default/objects/ExecutionControlSetting__c/fields/Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox indicates that all Triggers are running/not</description>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>