force-app/main/default/objects/ExecutionControlSetting__c/fields/Run_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Run_Validation_Rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox indicates that all Validation Rules are running/not</description>
    <label>Run Validation Rule</label>
    <type>Checkbox</type>
</CustomField>