force-app/main/default/objects/ExecutionControlSetting__c/fields/Run_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Run_Workflow__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Checkbox indicates that all Workflows are running/not</description>
    <label>Run Workflow</label>
    <type>Checkbox</type>
</CustomField>